--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,14 @@
     "manifest_version": 2,
     "name": "IMDB Episode Ratings",
     "version": "0.2",
+    "icons": {
+            "16": "icon16.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+    },
+    "browser_action": {
+        "default_icon": "icon48.png"
+    },
     "content_scripts": [
         {
             "matches": [
